todayWeather 호출 api의 잘못된 부분 수정